--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
 .h2-banner{
     font-size: 1.5rem;
+    text-align: center;
 }
-
+.h2-banner:hover{
+    font-size: 2.5rem;
+}
 .bg-img-banner{
     display: flex;
     background-image: url(img/banner.png);
@@ -36,6 +39,10 @@ align-items: center;
     border-radius: 5px;
     border: 3px solid darkred;
 }
+.img-second-article:hover{
+    height: auto;
+    width: 110%;
+}
 .h3-second-article{
     margin-bottom: 2rem;
     text-align: center;
@@ -59,6 +66,10 @@ align-items: center;
     margin-right: 2rem;
     border: 3px solid darkred;
     border-radius: 5px;
+}
+.img-thirty-article:hover{
+    height: auto;
+    width: 20%;
 }
 .text-thirty-article{
     display: flex;
@@ -109,4 +120,7 @@ align-items: center;
     background-color: lightgoldenrodyellow;
     border-radius: 5px;
     border: solid darkred;
+}
+.button-foot:hover{
+    background-color: goldenrod;
 }
